--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -183,6 +183,101 @@
 
     <div class="blankHM"></div>
   </div>
+  <div class="BGseer2_1">
+    <div class="blankHS"></div>
+    <div class="wrapper">
+      <div class="Grid Grid--full">
+        <div class="Grid-cell">
+          <div class="element">
+            <h1><strong class="colorSEERDark">Powerful machine learning with Reddit API</strong>
+            </h1>
+            <h4> SEER integrates and understands Reddit data to deliver insights at your fingertips
+              to help you understand your customers better</h4>
+          </div>
+        </div>
+      </div>
+      <div class="blankHS"></div>
+      <div class="Grid Grid--full">
+        <div class="Grid-cell">
+          <div class="element">
+            <img src="Hi-fi_diagram.svg" alt="How it works">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="elementSeerDivider"></div>
+
+  <div class="BGseer0">
+    <div class="blankHXS"></div>
+    <div class="wrapper">
+      <div class="Grid Grid--full">
+        <div class="Grid-cell">
+          <div class="element">
+            <h1><strong class="colorSEERDark">See trend for keywords</strong>
+            </h1>
+            <h4>In order to track the band and product, see how keywords perform over time with
+              upvote ratio, sentiment score, and post counts</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="Grid Grid--full">
+        <div class="Grid-cell">
+          <div class="element">
+            <img src="Hi-fi_diagram_linegraph.svg" alt="How it works">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper">
+      <div class="Grid Grid--full">
+        <div class="Grid-cell">
+          <div class="element">
+            <h1><strong class="colorSEERDark">See performance by communities</strong>
+            </h1>
+            <h4> For advertising, understand which communities perform the best for your keywords
+            </h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="Grid Grid--full">
+        <div class="Grid-cell">
+          <div class="element">
+            <img src="Hi-fi_diagram_piechart.svg" alt="How it works">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper">
+      <div class="Grid Grid--full">
+        <div class="Grid-cell">
+          <div class="element">
+            <h1><strong class="colorSEERDark">View raw post data</strong>
+            </h1>
+            <h4> See the top post by sorting sentiment score and upvote ratio
+              See the most recent posts by sorting date</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="Grid Grid--full">
+        <div class="Grid-cell">
+          <div class="element">
+            <img src="Hi-fi_diagram_table.svg" alt="How it works">
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
+
+
   <!-- Working process -->
 
   <main class="">
@@ -462,6 +557,7 @@
       </section>
 
       <section id="RedditAPI">
+        <div class="elementSeerDivider"></div>
 
         <div class="BGseer2_1">
           <div class="blankHS"></div>
@@ -481,24 +577,13 @@
             </div>
           </div>
           <!-- Arrow -->
-          <div class="blankHS"></div>
           <!-- Reddit API -->
 
           <div class="wrapper">
             <!-- user Journey -->
             <div class="wrapper">
-              <div class="Grid Grid--full u-textCenter">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="elementInner cardBG">
-                      <img class="iconM" src="icon_Reddit.svg" alt="icon">
+              <div class="Grid Grid--full">
 
-                      <div class="blankHXS"></div>
-                      <h5> <strong> Reddit API </strong> </h5>
-
-                    </div>
-                  </div>
-                </div>
                 <div class="Grid-cell">
                   <div class="element">
 
@@ -513,20 +598,16 @@
 
           </div>
           <div class="blankHS"></div>
+          <div class="elementSeerDivider"></div>
 
         </div>
         <!-- Reddit API -->
       </section>
-    </section>
-    <div class="elementSeerDivider"></div>
-
-
-    <section id="ideation">
 
       <div class="BGseer0">
 
 
-        <div class="blankHXS"></div>
+        <div class="blankHS"></div>
         <!-- Arrow -->
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -632,6 +713,11 @@
         <div class="blankHS"></div>
 
       </div>
+    </section>
+
+
+    <section id="ideation">
+
 
 
       <div class="elementSeerDivider"></div>
@@ -807,20 +893,17 @@
         <!-- wireframes -->
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
-            <div class="element">
-              <h4>It takes two steps to see the keyword result on the dashboard</h4>
-              <h4 class="leftVerLine SEER"> Step one, set up the <strong
-                  class="textDecor SEER">keyword</strong></h4>
-              <h4 class="leftVerLine SEER"> step two, go to the dashboard to select the <strong
-                  class="textDecor SEER">time range</strong></h4>
-
-              <h4>I decide to have the left navigation panel. It including dashboard, keyword, and
-                setting tabs</h4>
-
+            <div class="element colorSEERBG leftVerLine SEER">
+              <h4>
+                <p><strong>It takes two steps to see the keyword result on the dashboard</strong>
+                </p>
+                <p> Step one, set up the <strong class="textDecor SEER">keyword</strong> </p>
+                <p> step two, go to the dashboard to select the <strong class="textDecor SEER">time
+                    range</strong></strong> </p>
+              </h4>
             </div>
           </div>
         </div>
-
       </section>
       <div class="blankHS"></div>
 
@@ -875,23 +958,27 @@
 
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
-            <div class="element">
-              <h4>By thinking one step deeper about charts</h4>
-              <h4 class="leftVerLine SEER"> the <strong class="textDecor SEER">post count</strong>,
-                <strong class="textDecor SEER">upvote ratio</strong>, and <strong
-                  class="textDecor SEER">sentiment score</strong> are the most significant data for
-                the keywords
+            <div class="element colorSEERBG leftVerLine SEER">
+              <h4>
+                <p><strong>By thinking one step deeper about charts</strong>
+                </p>
+                <p> the <strong class="textDecor SEER">post count</strong>,
+                  <strong class="textDecor SEER">upvote ratio</strong>, and <strong
+                    class="textDecor SEER">sentiment score</strong> are the most significant data
+                  for
+                  the keywords
+                </p>
+                <p> step two, go to the dashboard to select the <strong class="textDecor SEER">time
+                    range</strong> </p>
+                <p> So I decide to use the <strong class="textDecor SEER">line chart</strong> to
+                  show
+                  the post count, upvote ratio, and
+                  sentiment score. and using one single <strong class="textDecor SEER">pie
+                    chart</strong> to show the combined date of Reddit
+                  post count and communities</p>
               </h4>
-              <h4 class="leftVerLine SEER"> step two, go to the dashboard to select the <strong
-                  class="textDecor SEER">time range</strong></h4>
-
-              <h4>So I decide to use the <strong class="textDecor SEER">line chart</strong> to show
-                the post count, upvote ratio, and
-                sentiment score. and using one single <strong class="textDecor SEER">pie
-                  chart</strong> to show the combined date of Reddit
-                post count and communities </h4>
-
             </div>
+
           </div>
         </div>
       </section>
@@ -914,53 +1001,58 @@
         <!-- testing -->
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
-            <div class="element">
-              <h4>Tasks</h4>
+            <div class="element colorSEERBG leftVerLine SEER">
+              <h4>
+                <p><strong>Tasks</strong>
+                </p>
+                <p> Users should be able to <strong class="textDecor SEER">add and delete</strong>
+                  the <strong class="textDecor SEER">keywords</strong></p>
 
-              <h4 class="leftVerLine SEER">Users should be able to <strong
-                  class="textDecor SEER">add and delete</strong> the <strong
-                  class="textDecor SEER">keywords</strong>
-              </h4>
-              <h4 class="leftVerLine SEER">Users should be able to see how popular the <strong
-                  class="textDecor SEER">keywords</strong> in
-                Reddit posts were and what was the <strong class="textDecor SEER">sentiment</strong>
-                behind them.
-              </h4>
-              <h4 class="leftVerLine SEER">Users should be able to <strong
-                  class="textDecor SEER">filter data</strong> by a certain date
-                range or a single date
-              </h4>
+                <p> Users should be able to see how popular the <strong
+                    class="textDecor SEER">keywords</strong> in
+                  Reddit posts were and what was the <strong
+                    class="textDecor SEER">sentiment</strong>
+                  behind them. </p>
 
-              <h4 class="leftVerLine SEER">Users should be able to click the <strong
-                  class="textDecor SEER">link</strong> to see the
-                <strong class="textDecor SEER">original Reddit posts</strong>. For example, short
-                the table with negative sentiment or most
-                popular posts, open the most popular link to see the details
-              </h4>
+                <p> Users should be able to <strong class="textDecor SEER">filter data</strong> by
+                  a certain date
+                  range or a single date</p>
 
-            </div>
-          </div>
-          <div class="Grid-cell">
+                <p>Users should be able to click the <strong class="textDecor SEER">link</strong>
+                  to see the
+                  <strong class="textDecor SEER">original Reddit posts</strong>. For example,
+                  short
+                  the table with negative sentiment or most
+                  popular posts, open the most popular link to see the details
 
-
-            <div class="element">
-              <h4>Feedback from the testing</h4>
-
-              <h4 class="leftVerLine SEER">It is a bit ambiguous to navigate from keywords to the
-                dashboard. each keyword has its own dashboard. Do I still need to have the dashboard
-                tag on the left navigation panel? Or only have a list of keywords, move the setting
-                to the top right. </strong>
-              </h4>
-              <h4 class="leftVerLine SEER">When comparing data, the user has to open two windows to
-                compare, maybe there is a better way to compare the data side by side </strong>
+                </p>
               </h4>
             </div>
+            <div class="element colorSEERBG leftVerLine SEER">
+              <h4>
+                <p><strong>Feedback from the testing</strong>
+                </p>
+                <p> It is a bit ambiguous to navigate from keywords to the
+                  dashboard. each keyword has its own dashboard. Do I still need to have the
+                  dashboard
+                  tag on the left navigation panel? Or only have a list of keywords, move the
+                  setting
+                  to the top right. </strong></p>
+
+                <p>When comparing data, the user has to open two windows to
+                  compare, maybe there is a better way to compare the data side by side </strong>
+                </p>
+              </h4>
+            </div>
+
+
+
+
+
+
+
           </div>
-
-
-
-        </div>
-        <!-- testing -->
+          <!-- testing -->
       </section>
       <section id="midFiUpdate">
         <!-- Arrow -->
@@ -1087,7 +1179,7 @@
                       <div class="blankHXS"></div>
                       <h5> <strong> Post count </strong> </h5>
                       <ul>
-                        <li> By communities</li>
+                        <li> By Reddit communities</li>
                       </ul>
                     </div>
                   </div>
@@ -1103,7 +1195,7 @@
                       <div class="blankHXS"></div>
                       <h5> <strong> Upvote ratio </strong> </h5>
                       <ul>
-                        <li> Time and date</li>
+                        <li> from 0 to 1</li>
                       </ul>
                     </div>
                   </div>
@@ -1119,7 +1211,7 @@
                       <div class="blankHXS"></div>
                       <h5> <strong> Sentiment score </strong> </h5>
                       <ul>
-                        <li> Time and date</li>
+                        <li> From 10 to -10</li>
 
 
                       </ul>
@@ -1153,7 +1245,14 @@
           </div>
           <!-- Arrow -->
           <div class="blankHS"></div>
-          <!-- wireframes -->
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="modal-target" src="Hi-fi_landing.svg" alt="Wireframes">
+              </div>
+            </div>
+          </div>
+          <div class="blankHS"></div>
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
@@ -1162,7 +1261,6 @@
 
             </div>
           </div>
-          <!-- wireframes -->
           <div class="blankHS"></div>
 
           <div class="Grid Grid--full wrapper">
@@ -1172,6 +1270,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHS"></div>
+
 
         </section>
 
