--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -391,42 +391,56 @@
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <h4>On average, recruiters are spending <strong
-                    class="textDecor APPOINTA">two-thirds</strong> of their overall hiring process
-                  on <strong class="textDecor APPOINTA">interview scheduling</strong>.</h4>
+                <div class="element colorAPPOINTABG leftVerLine APPOINTA">
+                  <h4 class="">
+                    <p>On average, recruiters are spending <strong
+                        class="textDecor APPOINTA">two-thirds</strong> of their overall hiring
+                      process
+                      on <strong class="textDecor APPOINTA">interview scheduling</strong>.</p>
+                    <img class="" src="Diagram_1.svg" alt="Diagram">
 
 
-                <img class="" src="Diagram_1.svg" alt="Diagram">
+                  </h4>
+                </div>
+                <div class="element colorAPPOINTABG leftVerLine APPOINTA">
+                  <h4 class="">
 
-                <h4>Along with recruitment scheduling being very time-consuming, the following
-                  factors are the reasons for the difficulties:</h4>
+                    <p>Along with recruitment scheduling being very time-consuming, the following
+                      factors are the reasons for the difficulties:</p>
+                    <ul>
+                      <li>Reach out and get availability from the candidate </li>
+                      <li>Find an eligible interviewer from an interview pool, check availability
+                      </li>
+                      <li>
+                        Match <strong class="textDecor APPOINTA">availability</strong> between
+                        qualified candidate and eligible interviewer
+                      </li>
+                      <li>
+                        Easy to make <strong class="textDecor APPOINTA">mistakes</strong>, companies
+                        have to hire
+                        recruiter coordinators to make sure candidates won't have a bad experience
+                      </li>
+                      <li>When booking an onsite interview, it is a huge
+                        challenge to find a group of people available at the same time
 
-                <h4 class="leftVerLine APPOINTA"> Reach out and get availability from the candidate
-                </h4>
-                <h4 class="leftVerLine APPOINTA"> Find an eligible interviewer from an interview
-                  pool, check availability
-                </h4>
-                <h4 class="leftVerLine APPOINTA"> <strong class="textDecor APPOINTA">Match
-                    availability</strong> between qualified candidate and
-                  eligible interviewer</h4>
-                <h4 class="leftVerLine APPOINTA">Easy to make <strong
-                    class="textDecor APPOINTA">mistakes</strong>, companies have to hire
-                  recruiter coordinators to make sure candidates won't have a bad experience</h4>
-                <h4 class="leftVerLine APPOINTA">When booking an onsite interview, it is a huge
-                  challenge to find a group of people available at the same time</h4>
-                <img class="" src="Diagram_2.svg" alt="Diagram">
+                      </li>
+                    </ul>
+                    <img class="" src="Diagram_2.svg" alt="Diagram">
+                  </h4>
+                </div>
 
+                <div class="element colorAPPOINTABG leftVerLine APPOINTA">
+                  <h4 class="">
+                    <p>The recruitment app and scheduling app currently they are using are not very
+                      efficient for scheduling job interviews</p>
+                      <p> The existing tools such as Greenhouse and Calendly
+                        schedule for <strong class="textDecor APPOINTA">a specific interviewer</strong>.
+                        Most time, finding an interviewer from an interview pool is unnecessary because it
+                        is a uniform predetermined interview. </p>
+                  </h4>
+                </div>
               </div>
-              <div class="element">
-                <h4>The recruitment app and scheduling app currently they are using are not very
-                  efficient for scheduling job interviews</h4>
-
-                <h4 class="leftVerLine APPOINTA"> The existing tools such as Greenhouse and Calendly
-                  schedule for <strong class="textDecor APPOINTA">a specific interviewer</strong>.
-                  Most time, finding an interviewer from an interview pool is unnecessary because it
-                  is a uniform predetermined interview. </h4>
-
-              </div>
+ 
             </div>
           </div>
           <!-- Challenge  -->
@@ -450,11 +464,13 @@
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <h4>The target user will be <strong class="textDecor APPOINTA">tech company
-                    recruiters and hiring managers</strong>. Ideally
-                  work in medium and large companies, with approximately more than 50 employees.
-                </h4>
-
+                <div class="element colorAPPOINTABG leftVerLine APPOINTA">
+                  <h4 class="">
+                    <p>The target user will be <strong class="textDecor APPOINTA">tech company
+                      recruiters and hiring managers</strong>. Ideally
+                    work in medium and large companies, with approximately more than 50 employees.</p>
+                  </h4>
+                </div>
               </div>
             </div>
           </div>
