--- a/project/index.html
+++ b/project/index.html
@@ -208,7 +208,7 @@
           <div class="element">
 
             <div class="elementCard float cardBorder">
-              <img src="/image/Cover_APPOINTA.jpg" alt="Appointa">
+              <img src="../image/Cover_APPOINTA.jpg" alt="Appointa">
               <div class="element">
                 <div class="element">
                   <h5>For scheduling interview</h5>
