--- a/project/index.html
+++ b/project/index.html
@@ -145,7 +145,7 @@
     </div>
   </nav>
   <!-- header -->
-  <div class="blankHL"></div>
+  <div class="blankHM"></div>
   <!--intro-->
   <div class="wrapper element">
     <div class="intro">
@@ -161,27 +161,61 @@
       </div>
       <p class="divider"></p>
       <div class="column">
+
         <div class="intro">
-          <span class="t-me">product</span>
+          <span class="t-me"> UI/UX designer &nbsp;</span>
           <span class="divider1"></span>
-          <span class="t-me"> UI/UX designer</span>
+
+          <span class="t-me"> Product designer </span>
         </div>
-        <div class="rowChng">
-          <span class="t-me"> most recent &nbsp;</span>
-          <span class="t-me"> design projects </span>
+        <div class="intro">
+          <span class="t-me"> Ex </span>
+          <span class="divider1"></span>
+
+          <span class="t-me">Architectural designer</span>
         </div>
       </div>
     </div>
-    <div class="t-intro zTop" data-aos="fade-up">
-      <p>
-        I’m currently a UI/UX Designer at BookYourPet and have been working on the book appointment
-        & team management of ECommerce teams.
-      </p>
-      <p> BYP is a SaaS product aimed at connecting pet owners with pet service providers. I work
-        closely with PM and Devs on all phases of the design process. Leading the
-        design of all major features and flows.
-      </p>
+    <div class="blankHS"></div>
+
+    <div class="Grid Grid--gutters Grid--cols-3">
+      <div class="Grid-cell">
+        <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank">
+          <img class="intro-logo" src="../icon/in.svg" alt="linkedin">
+        </a>
+        <a href="https://github.com/vicky-wyq" target="_blank">
+          <img class="intro-logo" src="../icon/git.svg" alt="github">
+        </a>
+
+        <a href="https://www.instagram.com/vw_yiqi/" target="_blank">
+          <img class="intro-logo" src="../icon/ins.svg" alt="medium">
+        </a>
+      </div>
     </div>
+    <div class="blankHS"></div>
+    <div class="Grid Grid--gutters Grid--1of6">
+
+      <div class="Grid-cell">
+        <div class="elementButton"> 
+          <a href="/resume.pdf"> <button class="button-55">Resume</button></a>
+        </div>
+
+      </div>
+
+      <div class="Grid-cell">
+        <div class="elementButton">
+          <a href="/"> <button class="button-55">About me</button></a>
+        </div>
+      </div>
+
+    </div>
+
+
+
+
+
+
+
   </div>
   <!--intro-->
   <div class="blankHL"></div>
