--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </div>
   </nav>
   <!-- header -->
-  <div class="blankHL"></div>
+  <div class="blankHM"></div>
 
   <!--intro-->
   <div class="wrapper element">
