--- a/project/index.html
+++ b/project/index.html
@@ -192,19 +192,18 @@
         </a>
       </div>
     </div>
-    <div class="blankHS"></div>
+    <div class="blankHXS"></div>
     <div class="Grid Grid--gutters Grid--1of6">
 
       <div class="Grid-cell">
         <div class="elementButton"> 
-          <a href="/resume.pdf"> <button class="button-55">Resume</button></a>
+          <a href="/resume.pdf"> <button class="button-55 ">Resume</button></a>
         </div>
-
       </div>
 
       <div class="Grid-cell">
         <div class="elementButton">
-          <a href="/"> <button class="button-55">About me</button></a>
+          <a href="/"> <button class="button-55 arrButton">About me</button></a>
         </div>
       </div>
 
