--- a/architecture/index.html
+++ b/architecture/index.html
@@ -148,7 +148,7 @@
 
   </nav>
   <!-- header -->
-  <div class="blankHL"></div>
+  <div class="blankHM"></div>
   <!--intro-->
   <div class="wrapper element">
     <div class="intro">
