--- a/photography/index.html
+++ b/photography/index.html
@@ -149,7 +149,7 @@
   </nav>
   <!-- header -->
 
-  <div class="blankHL"></div>
+  <div class="blankHM"></div>
   <!--intro-->
   <div class="wrapper element">
     <div class="intro">
