--- a/project/index.html
+++ b/project/index.html
@@ -197,7 +197,7 @@
 
       <div class="Grid-cell">
         <div class="elementButton"> 
-          <a href="/resume.pdf"> <button class="button-55 ">Resume</button></a>
+          <a href="/resume.pdf" target="_blank"> <button class="button-55 ">Resume</button></a>
         </div>
       </div>
 
