--- a/project/index.html
+++ b/project/index.html
@@ -169,7 +169,7 @@
           <span class="t-me"> Product designer </span>
         </div>
         <div class="intro">
-          <span class="t-me"> Ex </span>
+          <span class="t-me"> ex </span>
           <span class="divider1"></span>
 
           <span class="t-me">Architectural designer</span>
