--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <!--intro-->
   <div class="wrapper element">
     <div class="intro">
-      <div class="t-hello">HELLO, </div>
+      <div class="t-hello">Product,UIUX designer </div>
     </div>
     <div class="blankHXS"></div>
 
@@ -189,8 +189,8 @@
           <span class="t-me"> UI&#47;UX designer</span>
         </div>
         <div class="rowChng">
-          <span class="t-me"> based in the &nbsp;</span>
-          <span class="t-me"> San Francisco Bay Area </span>
+          <span class="t-me"> with an &nbsp;</span>
+          <span class="t-me"> architecture background </span>
         </div>
 
       </div>
