--- a/project/index.html
+++ b/project/index.html
@@ -168,11 +168,9 @@
 
           <span class="t-me"> Product designer </span>
         </div>
-        <div class="intro">
-          <span class="t-me"> ex </span>
-          <span class="divider1"></span>
-
-          <span class="t-me">Architectural designer</span>
+        <div class="rowChng">
+          <span class="t-me"> based in the &nbsp;</span>
+          <span class="t-me"> San Francisco Bay Area </span>
         </div>
       </div>
     </div>
@@ -240,7 +238,7 @@
         <a href="/project/appointa/">
           <div class="element">
 
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder APPOINTA">
               <img src="../image/Cover_APPOINTA.jpg" alt="Appointa">
               <div class="element">
                 <div class="element">
@@ -259,7 +257,7 @@
         <a href="/project/seer/">
           <div class="element">
 
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder SEER">
               <img src="../image/Cover_SEER.jpg" alt="ANARE">
               <div class="element">
                 <div class="element">
