--- a/index.html
+++ b/index.html
@@ -171,26 +171,29 @@
   <!--intro-->
   <div class="wrapper element">
     <div class="intro">
-      <div class="t-hello">Product,UIUX designer </div>
+      <div class="t-hello">Hi there! </div>
     </div>
     <div class="blankHXS"></div>
 
     <div class="intro" data-aos="fade-up">
       <div class="column">
         <strong>
-          <h1 class="t-hi ">I'm Vicky.</h1>
+          <div class="intro">
+            <span class="t-hi"> Product &nbsp;</span>
+            <span class="divider1"></span>
+            <span class="t-hi"> Design &nbsp;</span>
+            <span class="divider1"></span>
+            <span class="t-hi"> Architecture </span>
+            <span class="divider1"></span>
+            <span class="t-hi"> Art </span>
+          </div>
         </strong>
-      </div>
-      <p class="divider"></p>
-      <div class="column">
-        <div class="intro">
-          <span class="t-me">product designer</span>
-          <span class="divider1"></span>
-          <span class="t-me"> UI&#47;UX designer</span>
-        </div>
-        <div class="rowChng">
-          <span class="t-me"> with an &nbsp;</span>
-          <span class="t-me"> architecture background </span>
+        <div class="blankHXS"></div>
+
+        <div class="column">
+          <span class="t-me">Broad skill set developed in a startup environment</span>
+          <span class="t-me">with deep engagement in all stages of the design process</span>
+
         </div>
 
       </div>
