--- a/project/index.html
+++ b/project/index.html
@@ -149,32 +149,34 @@
   <!--intro-->
   <div class="wrapper element">
     <div class="intro">
-      <div class="t-hello">HELLO, </div>
+      <div class="t-hello">Hello, I'm Vicky. </div>
     </div>
     <div class="blankHXS"></div>
-
     <div class="intro" data-aos="fade-up">
       <div class="column">
         <strong>
-          <h1 class="t-hi">I'm Vicky.</h1>
+          <div class="intro">
+            <span class="t-hi"> UI/UX designer &nbsp;</span>
+            <span class="divider1"></span>
+
+            <span class="t-hi"> Product designer </span>
+          </div>
         </strong>
-      </div>
-      <p class="divider"></p>
-      <div class="column">
+        <div class="blankHXS"></div>
 
-        <div class="intro">
-          <span class="t-me"> UI/UX designer &nbsp;</span>
-          <span class="divider1"></span>
-
-          <span class="t-me"> Product designer </span>
-        </div>
         <div class="rowChng">
-          <span class="t-me"> based in the &nbsp;</span>
-          <span class="t-me"> San Francisco Bay Area </span>
+          <span class="t-me"> I am currently based out of &nbsp;</span>
+          <span class="t-me"> San Francisco </span>
         </div>
+
+        <div class="column">
+          <span class="t-me"> Design for business and consumer-facing websites with a small team.</span>
+
+        </div>
+
       </div>
     </div>
-    <div class="blankHS"></div>
+    <div class="blankHXS"></div>
 
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
@@ -190,11 +192,10 @@
         </a>
       </div>
     </div>
-    <div class="blankHXS"></div>
     <div class="Grid Grid--gutters Grid--1of6">
 
       <div class="Grid-cell">
-        <div class="elementButton"> 
+        <div class="elementButton">
           <a href="/resume.pdf" target="_blank"> <button class="button-55 ">Resume</button></a>
         </div>
       </div>
@@ -206,16 +207,9 @@
       </div>
 
     </div>
-
-
-
-
-
-
-
   </div>
   <!--intro-->
-  <div class="blankHL"></div>
+  <div class="blankHS"></div>
   <!-- Arrow -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
