--- a/architecture/index.html
+++ b/architecture/index.html
@@ -152,29 +152,19 @@
   <!--intro-->
   <div class="wrapper element">
     <div class="intro">
-      <div class="t-hello">HELLO, </div>
+      <div class="t-hello">Hi there! </div>
     </div>
     <div class="blankHXS"></div>
-
-    <div class="intro" data-aos="fade-up">
-      <div class="column">
-        <strong>
-          <h1 class="t-hi">I'm Vicky.</h1>
-        </strong>
+    <strong>
+      <div class="intro">
+        <span class="t-hi"> architecture &nbsp;</span>
+        <span class="divider1"></span>
+        <span class="t-hi"> design &nbsp;</span>
+        <span class="divider1"></span>
+        <span class="t-hi"> selected academic projects </span>
       </div>
-      <p class="divider"></p>
-      <div class="column">
-        <div class="intro">
-          <span class="t-me">architecture</span>
-          <span class="divider1"></span>
-          <span class="t-me"> design </span>
-        </div>
-        <div class="rowChng">
-          <span class="t-me"> selected academic projects </span>
-        </div>
-
-      </div>
-    </div>
+    </strong>
+ 
 
     <div class="t-intro zTop" data-aos="fade-up">
       <p>
