--- a/photography/index.html
+++ b/photography/index.html
@@ -153,28 +153,21 @@
   <!--intro-->
   <div class="wrapper element">
     <div class="intro">
-      <strong>
-        <h1 class="t-hi">I'm Vicky.</h1>
-      </strong>
+      <div class="t-hello">Hi there! </div>
     </div>
     <div class="blankHXS"></div>
 
     <div class="intro" data-aos="fade-up">
-      <div class="column">
-        <h1 class="t-hi">I'm Vicky.</h1>
-      </div>
-      <p class="divider"></p>
-      <div class="column">
+      <strong>
         <div class="intro">
-          <span class="t-me">observation</span>
+          <span class="t-hi"> observation &nbsp;</span>
           <span class="divider1"></span>
-          <span class="t-me"> photography </span>
+          <span class="t-hi"> photography &nbsp;</span>
+          <span class="divider1"></span>
+          <span class="t-hi"> selected photographs </span>
         </div>
-        <div class="rowChng">
-          <span class="t-me"> selected photographs </span>
-        </div>
-
-      </div>
+      </strong>
+ 
     </div>
 
     <div class="t-intro zTop" data-aos="fade-up">
