--- a/project/index.html
+++ b/project/index.html
@@ -196,7 +196,7 @@
 
       <div class="Grid-cell">
         <div class="elementButton">
-          <a href="/resume.pdf" target="_blank"> <button class="button-55 ">Resume</button></a>
+          <a href="/resume.pdf" target="_blank"> <button class="button-55">Resume</button></a>
         </div>
       </div>
 
@@ -216,7 +216,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="Grid">
-            <p class="tArrow"> Current Projects</p>
+            <p class="tArrow"> Most Recent Projects</p>
             <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
           </div>
         </div>
