--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -218,10 +218,8 @@
 
           <h3><strong>Hypothesis</strong></h3>
 
-          <h4>If there is an application that can help recruiters and hiring managers schedule job
-            interviews, then they will save a lot of time and effort to schedule interviews</h4>
-          <h4>I consider finding a way to match availability between candidate and interviewer is
-            the key
+          <h4>If schedule and organize interviews with potential candidates more efficiently</h4>
+          <h4>It will improve recruiters’ processing time, reduce administrative tasks, and enhance the overall candidate experience.
           </h4>
 
         </div>
@@ -351,15 +349,18 @@
       <ol>
         <li><a href="#discover">Discover</a>
           <ul>
-            <li class=""><a href="#overview">Overview </a></li>
 
+            <li class=""><a href="#overview">Surveys </a></li>
+            <li class=""><a>User interviews </a></li>
+            <li class=""><a>Observations </a></li>
 
-            <li class=""><a href="#useCases">Use cases </a></li>
 
           </ul>
         </li>
         <li><a href="#define">Define</a>
           <ul>
+            <li class=""><a href="#useCases">Use cases </a></li>
+
             <li class=""><a href="#userJourney">User journey</a></li>
 
             <li class=""><a href="#personas">Personas</a></li>
@@ -409,7 +410,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
-                    <p class="tArrow"> Understanding the challenge</p>
+                    <p class="tArrow"> Understand the challenge</p>
                     <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
@@ -520,7 +521,20 @@
 
         </div>
       </section>
-      <!-- Design process -->
+
+    </section>
+
+    <section id="define">
+      <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+        <div class="Grid-cell">
+          <h1 class="Grid Grid--center"> <span>Define</span><img class="moveUpDown widthLogo"
+              src="../../icon/icon_research.svg" alt="Research">
+          </h1>
+        </div>
+      </div>
+      <div class="blankHXS"></div>
+
+
       <section id="useCases">
         <!-- Arrow -->
         <div class="wrapper">
@@ -599,20 +613,6 @@
         </div>
         <!-- uses cases -->
       </section>
-    </section>
-
-    <section id="define">
-      <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
-        <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>Define</span><img class="moveUpDown widthLogo"
-              src="../../icon/icon_research.svg" alt="Research">
-          </h1>
-        </div>
-      </div>
-      <div class="blankHXS"></div>
-
-
-
 
 
 
