--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -150,39 +150,69 @@
 
 
   <!-- Working process -->
-  <div class="BGseer1">
-    <div class="blankMin1080"></div>
-    <div class="blankMin1880"></div>
-
+  <div class="BGseer2_1">
+    <div class="blankPhone"></div>
     <div class="blankHS"></div>
-
-
-    <!-- hi-fi -->
-    <div class="Grid Grid--full wrapper">
-      <div class="Grid-cell">
-        <div class="element">
-          <img class="" src="Hi-fi_landing_short.svg" alt="Wireframes">
-        </div>
-      </div>
-    </div>
-    <!-- hi-fi -->
-
-    <div class="wrapper zTop">
-      <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
-        <div class="Grid-cell">
-          <div class="element">
-            <h1 class="colorSEER">SEER</h1>
-
-
-            <h4> Reddit<img class="IconS" src="Reddit.svg" alt="Placeholder">
-              Keywords analyser for business</h4>
+    <div class="ProjectBanner">
+      <div class="blankMin1880"></div>
+      <img class="" src="Mockup.png" alt="SEER">
+      <div class="ProjectBannerInner wrapper displayNonePhone">
+        <div class="Grid Grid--gutters Grid--cols-3">
+          <div class="Grid-cell">
+            <div class="element">
+              <h5 class=""><strong class="">Duration:</strong> August 2022</h5>
+            </div>
+          </div>
+          <div class="Grid-cell">
+            <div class="element">
+              <h5 class=""><strong class="">Role:</strong> Product
+                strategy &#124; Research &#124; Visual</h5>
+            </div>
+          </div>
+          <div class="Grid-cell">
+            <div class="element">
+              <h5 class=""><strong class="">Tool:</strong> Figma | VS
+                Code
+              </h5>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="blankHM"></div>
   </div>
+  <div class="blankHXS"></div>
+
+  <div class="Grid Grid--gutters Grid--cols-2 wrapper">
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="elementInner">
+
+          <h3><strong>Challenge</strong></h3>
+          <h4>Business owners want to know the engagement and sentiment of people. Reddit is the
+            platform where people comes to discuss product and brands.
+          </h4>
+
+        </div>
+      </div>
+    </div>
+    <div class="Grid-cell">
+      <div class="element">
+
+        <div class="elementInner">
+
+          <h3><strong>Hypothesis</strong></h3>
+
+          <h4>If there is a keywords analysis tool with a sentiment score for Reddit.
+          </h4>
+          <h4>It will help the business owner understand how their customer feels about their brand.
+          </h4>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="blankHS"></div>
+
   <div class="BGseer2_1">
     <div class="blankHS"></div>
     <div class="wrapper">
