--- a/architecture/index.html
+++ b/architecture/index.html
@@ -151,20 +151,23 @@
   <div class="blankHM"></div>
   <!--intro-->
   <div class="wrapper element">
+ 
     <div class="intro">
       <div class="t-hello">Hi there! </div>
     </div>
     <div class="blankHXS"></div>
-    <strong>
-      <div class="intro">
-        <span class="t-hi"> architecture &nbsp;</span>
-        <span class="divider1"></span>
-        <span class="t-hi"> design &nbsp;</span>
-        <span class="divider1"></span>
-        <span class="t-hi"> selected academic projects </span>
-      </div>
-    </strong>
+
+    <div class="intro" data-aos="fade-up">
+      <strong>
+        <div class="intro">
+          <span class="t-hi"> Architecture &nbsp;</span>
+        
+          <span class="divider1"></span>
+          <span class="t-hi"> Selected academic projects </span>
+        </div>
+      </strong>
  
+    </div>
 
     <div class="t-intro zTop" data-aos="fade-up">
       <p>
