--- a/photography/index.html
+++ b/photography/index.html
@@ -160,11 +160,9 @@
     <div class="intro" data-aos="fade-up">
       <strong>
         <div class="intro">
-          <span class="t-hi"> observation &nbsp;</span>
+          <span class="t-hi"> Photography &nbsp;</span>
           <span class="divider1"></span>
-          <span class="t-hi"> photography &nbsp;</span>
-          <span class="divider1"></span>
-          <span class="t-hi"> selected photographs </span>
+          <span class="t-hi"> Selected photographs </span>
         </div>
       </strong>
  
